src/qml/jsruntime/qv4engine.cpp
@@ -1517,6 +1517,12 @@ static QVariant toVariant(QV4::ExecutionEngine *e, const QV4::Value &value, QMet
     if (metaType == QMetaType::fromType<bool>())
         return QVariant(value.toBoolean());
 
+    if (metaType == QMetaType::fromType<double>())
+        return QVariant(value.toNumber());
+
+    if (metaType == QMetaType::fromType<float>())
+        return QVariant(float(value.toNumber()));
+
     if (metaType == QMetaType::fromType<QJsonValue>())
         return QVariant::fromValue(QV4::JsonObject::toJsonValue(value));
 
