tests/auto/qml/qmlcppcodegen/data/undefinedToDouble.qml
@@ -1,0 +1,6 @@
+pragma Strict
+import QtQml
+
+QtObject {
+    property double d: Math.max(undefined, 40)
+}
