tests/auto/qml/qmlcppcodegen/tst_qmlcppcodegen.cpp
@@ -141,6 +141,7 @@ private slots:
     void enumConversion();
     void enumProblems();
     void storeElementSideEffects();
+    void undefinedToDouble();
 };
 
 void tst_QmlCppCodegen::simpleBinding()
@@ -1965,8 +1966,19 @@ void tst_QmlCppCodegen::typedArray()
              QList<int>({1, 2, 3, 4}));
     QCOMPARE(qvariant_cast<QList<QDateTime>>(o->property("values4")),
              QList<QDateTime>({date, date, date}));
-    QCOMPARE(qvariant_cast<QList<double>>(o->property("values5")),
-             QList<double>({1, 2, 3.4, 30, 0, 0}));
+    {
+        const QList<double> actual
+                = qvariant_cast<QList<double>>(o->property("values5"));
+        const QList<double> expected
+                = QList<double>({1, 2, 3.4, 30, std::numeric_limits<double>::quiet_NaN(), 0});
+        QCOMPARE(actual.size(), expected.size());
+        for (qsizetype i = 0, end = actual.size(); i != end; ++i) {
+            if (std::isnan(expected[i]))
+                QVERIFY(std::isnan(actual[i]));
+            else
+                QCOMPARE(actual[i], expected[i]);
+        }
+    }
     date = QDateTime::currentDateTime();
     o->setProperty("aDate", date);
     QCOMPARE(qvariant_cast<QList<QDateTime>>(o->property("values4")),
@@ -2556,6 +2568,18 @@ void tst_QmlCppCodegen::storeElementSideEffects()
     QVERIFY(prop.isArray());
     QCOMPARE(prop.property(0).toInt(), 10);
 };
+
+void tst_QmlCppCodegen::undefinedToDouble()
+{
+    QQmlEngine engine;
+    QQmlComponent c(&engine, QUrl(u"qrc:/TestTypes/undefinedToDouble.qml"_s));
+    QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+    QScopedPointer<QObject> o(c.create());
+    QVERIFY(!o.isNull());
+    const QVariant d = o->property("d");
+    QCOMPARE(d.metaType(), QMetaType::fromType<double>());
+    QVERIFY(std::isnan(d.toDouble()));
+}
 
 QTEST_MAIN(tst_QmlCppCodegen)
 
